<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="io.amosbake.animationsummary.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_bezier"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_morph"
        android:orderInCategory="100"
        android:title="@string/action_morph"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_meature"
        android:orderInCategory="100"
        android:title="@string/action_measure"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_draggable"
        android:orderInCategory="100"
        android:title="@string/action_draggable"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_position"
        android:orderInCategory="100"
        android:title="@string/action_position"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_transition"
        android:orderInCategory="100"
        android:title="@string/action_transition"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_touchdemo"
        android:orderInCategory="100"
        android:title="@string/action_touchdemo"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_likebutton"
        android:orderInCategory="100"
        android:title="@string/action_likebutton"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_constraint_transition"
        android:orderInCategory="100"
        android:title="@string/constraint_transition"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_layout_transition"
        android:orderInCategory="100"
        android:title="@string/layout_transition"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_recycler_view"
        android:orderInCategory="100"
        android:title="@string/recyclerview"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_animation_misc"
        android:orderInCategory="100"
        android:title="@string/animationmisc"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_layout_animation"
        android:orderInCategory="100"
        android:title="@string/layoutAnimation"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_interpolators"
        android:orderInCategory="100"
        android:title="@string/interpolators"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_ripple_effects"
        android:orderInCategory="100"
        android:title="@string/ripple_effects"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_circular_reveal"
        android:orderInCategory="100"
        android:title="@string/circular_reveal"
        app:showAsAction="ifRoom"/>
</menu>
